syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/digisata/auth-service/stubs/social";

message SocialPaging {
    int32 current_page = 1 [json_name = "current_page"];
    int32 total_page = 2 [json_name = "total_page"];
    int32 count = 3 [json_name = "count"];
}

message SocialBaseResponse {
    string message = 1 [json_name = "message"];
    optional google.protobuf.Any data = 2 [json_name = "data"];
    optional SocialPaging paging = 3 [json_name = "paging"];
}

message CreateSocialRequest {
    string name = 1 [json_name = "name"];
}

message GetAllSocialRequest {
    optional string search = 1 [json_name = "search"];
    optional int32 page = 2 [json_name = "page"];
    optional int32 limit = 3 [json_name = "limit"];
}

message GetAllSocialResponse {
    string message = 1 [json_name = "message"];
    repeated GetSocialByIDResponse data = 2 [json_name = "data"];
    SocialPaging paging = 3 [json_name = "paging"];
}

message GetSocialByIDRequest {
    string id = 1 [json_name = "id"];
}

message GetSocialByIDResponse {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
    google.protobuf.Timestamp created_at = 3 [json_name = "created_at"];
    google.protobuf.Timestamp updated_at = 4 [json_name = "updated_at"];
    google.protobuf.Timestamp deleted_at = 5 [json_name = "deleted_at"];
}

message UpdateSocialByIDRequest {
    string id = 1 [json_name = "id"];
    string name = 2 [json_name = "name"];
}

message DeleteSocialByIDRequest {
    string id = 1 [json_name = "id"];
}
