syntax = "proto3";

package proto;

import "social/payload_messages.proto";

option go_package = "github.com/digisata/auth-service/stubs/social";

service SocialService {
    rpc CreateSocial(CreateSocialRequest) returns (SocialBaseResponse){};
    rpc GetSocial(GetSocialByIDRequest) returns (SocialBaseResponse){};
    rpc GetAllSocial(GetAllSocialRequest)returns (GetAllSocialResponse) {};
    rpc UpdateSocial(UpdateSocialByIDRequest) returns (SocialBaseResponse) {};
    rpc DeleteSocial(DeleteSocialByIDRequest) returns (SocialBaseResponse) {};
}



